--- a/homework01.ipynb
+++ b/homework01.ipynb
@@ -35,11 +35,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write your code"
+    "import numpy as np"
    ]
   },
   {
@@ -51,11 +51,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "       0., 0., 0.])"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write your code"
+    "np.zeros(20)"
    ]
   },
   {
@@ -67,11 +79,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.75, 1.75, 1.75, 1.75, 1.75, 1.75, 1.75, 1.75, 1.75, 1.75, 1.75,\n",
+       "       1.75, 1.75, 1.75, 1.75, 1.75, 1.75, 1.75, 1.75, 1.75])"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write your code"
+    "np.full(20, 1.75)"
    ]
   },
   {
@@ -85,9 +109,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20,\n",
+       "       21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write your code"
+    "np.arange(4, 32)"
    ]
   },
   {
@@ -99,11 +135,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([31, 30, 29, 28, 27, 26, 25, 24, 23, 22, 21, 20, 19, 18, 17, 16, 15,\n",
+       "       14, 13, 12, 11, 10,  9,  8,  7,  6,  5,  4])"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write your code"
+    "np.arange(4, 32)[::-1]"
    ]
   },
   {
@@ -115,11 +163,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3],\n",
+       "       [4, 5, 6],\n",
+       "       [7, 8, 9]])"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write your code"
+    "np.arange(1, 10).reshape(3, 3)"
    ]
   },
   {
@@ -131,11 +192,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0.],\n",
+       "       [0., 1., 0.],\n",
+       "       [0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write your code"
+    "np.eye(3)"
    ]
   },
   {
@@ -147,11 +221,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0., 0.],\n",
+       "       [1., 0., 0., 0.],\n",
+       "       [0., 1., 0., 0.],\n",
+       "       [0., 0., 1., 0.]])"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write your code"
+    "np.empty((4, 4))"
    ]
   },
   {
@@ -163,11 +251,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0., 0.],\n",
+       "       [1., 0., 0., 0.],\n",
+       "       [0., 1., 0., 0.],\n",
+       "       [0., 0., 1., 0.]])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write your code"
+    "np.eye(4, 4, -1)"
    ]
   },
   {
@@ -179,11 +281,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0.04747914, 0.67877869, 0.74889831],\n",
+       "        [0.91067744, 0.05269437, 0.79062627],\n",
+       "        [0.25635661, 0.65970173, 0.74269349]],\n",
+       "\n",
+       "       [[0.81351599, 0.93020934, 0.9203335 ],\n",
+       "        [0.38022471, 0.53605342, 0.41446709],\n",
+       "        [0.12734246, 0.36818511, 0.61415801]],\n",
+       "\n",
+       "       [[0.57791023, 0.22752986, 0.27100072],\n",
+       "        [0.68492237, 0.23499931, 0.06777265],\n",
+       "        [0.77044408, 0.00263055, 0.4586231 ]]])"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write your code"
+    "np.random.random((3,3,3))"
    ]
   },
   {
@@ -195,11 +318,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.07412779 0.69584126 0.87296279 0.99112109 0.39458314]\n",
+      " [0.93045178 0.83848957 0.10003811 0.43092494 0.88083143]\n",
+      " [0.03213951 0.94533904 0.03198252 0.32575314 0.17609069]\n",
+      " [0.97679982 0.48126008 0.53253648 0.03402453 0.70508892]\n",
+      " [0.14312637 0.91943961 0.03014438 0.86531225 0.77161602]]\n",
+      "0.030144376754296598\n",
+      "0.9911210922640503\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code"
+    "a = np.random.random((5,5))\n",
+    "print(a)\n",
+    "print(a.min())\n",
+    "print(a.max())"
    ]
   },
   {
@@ -211,11 +351,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5199127647639393"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write your code"
+    "np.average(np.random.random(50))"
    ]
   },
   {
@@ -227,11 +378,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 1, 1, 1],\n",
+       "       [1, 0, 0, 1],\n",
+       "       [1, 0, 0, 1],\n",
+       "       [1, 1, 1, 1]])"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write your code"
+    "np.array([[1,1,1,1],\n",
+    "          [1,0,0,1],\n",
+    "          [1,0,0,1],\n",
+    "          [1,1,1,1]])"
    ]
   },
   {
@@ -243,11 +411,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 0, 0, 0, 0],\n",
+       "       [1, 0, 0, 0, 0],\n",
+       "       [0, 2, 0, 0, 0],\n",
+       "       [0, 0, 3, 0, 0],\n",
+       "       [0, 0, 0, 4, 0]])"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write your code"
+    "np.array([[0,0,0,0,0],\n",
+    "          [1,0,0,0,0],\n",
+    "          [0,2,0,0,0],\n",
+    "          [0,0,3,0,0],\n",
+    "          [0,0,0,4,0]])"
    ]
   },
   {
@@ -259,11 +446,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 10,  13],\n",
+       "       [ 28,  40],\n",
+       "       [ 46,  67],\n",
+       "       [ 64,  94],\n",
+       "       [ 82, 121]])"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write your code"
+    "np.arange(15).reshape(5,3).dot(np.arange(6).reshape(3,2))"
    ]
   },
   {
@@ -275,11 +477,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  0,   1,   2,   3,   4,   5,   6,  -7,  -8,  -9, -10, -11,  12,\n",
+       "        13,  14])"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write your code"
+    "a = np.arange(15)\n",
+    "for i in a:\n",
+    "    if 6 < i < 12:\n",
+    "        a[i] = -i\n",
+    "a"
    ]
   },
   {
@@ -291,11 +509,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  2,  6],\n",
+       "       [12, 20, 30],\n",
+       "       [42, 56, 72]])"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write your code"
+    "A = np.arange(9).reshape(3,3)\n",
+    "B = np.arange(1,10).reshape(3,3)\n",
+    "C = A * B\n",
+    "C"
    ]
   },
   {
@@ -879,7 +1113,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "NeuNetwork",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -893,7 +1127,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
