--- a/sem01-numpy.ipynb
+++ b/sem01-numpy.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-22T15:42:51.828215Z",
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-22T15:42:51.842022Z",
@@ -70,7 +70,7 @@
        "1"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-22T15:42:51.854991Z",
@@ -96,7 +96,7 @@
        "(3,)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
        "       [-0.75428571+0.j       , -0.75428571-0.j       ]]))"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
        "3"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
        "dtype('int64')"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
        "array([1, 2, 3])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
        "array({1, 2, 3}, dtype=object)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[18], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43marray\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;66;03m# wrong!\u001b[39;00m\n",
+      "Cell \u001b[0;32mIn[10], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43marray\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;66;03m# wrong!\u001b[39;00m\n",
       "\u001b[0;31mTypeError\u001b[0m: array() takes from 1 to 2 positional arguments but 3 were given"
      ]
     }
@@ -1823,7 +1823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-22T15:42:52.074833Z",
@@ -1845,7 +1845,7 @@
        "       [72, 73, 74, 75, 76, 77, 78, 79, 80]])"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1936,7 +1936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-22T15:42:52.093678Z",
@@ -1951,7 +1951,7 @@
        "       [29, 30]])"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2060,7 +2060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-22T15:42:52.121334Z",
@@ -2074,7 +2074,7 @@
        "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10])"
       ]
      },
-     "execution_count": 281,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2086,7 +2086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-22T15:42:52.127505Z",
@@ -2100,7 +2100,7 @@
        "array([ 0,  1,  2,  4,  5,  6,  7,  9, 10])"
       ]
      },
-     "execution_count": 282,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2189,7 +2189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-22T15:42:53.481301Z",
@@ -2201,8 +2201,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 686 ms, sys: 239 ms, total: 925 ms\n",
-      "Wall time: 1 s\n"
+      "CPU times: user 1.23 s, sys: 252 ms, total: 1.48 s\n",
+      "Wall time: 1.49 s\n"
      ]
     }
    ],
@@ -2219,7 +2219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-22T15:42:56.303195Z",
@@ -2231,8 +2231,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.11 s, sys: 204 ms, total: 1.32 s\n",
-      "Wall time: 1.48 s\n"
+      "CPU times: user 2.75 s, sys: 9.56 ms, total: 2.76 s\n",
+      "Wall time: 2.74 s\n"
      ]
     }
    ],
@@ -2246,7 +2246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-22T15:42:58.772193Z",
@@ -2258,8 +2258,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 805 ms, sys: 301 ms, total: 1.11 s\n",
-      "Wall time: 1.34 s\n"
+      "CPU times: user 1.85 s, sys: 119 ms, total: 1.97 s\n",
+      "Wall time: 1.96 s\n"
      ]
     }
    ],
@@ -2270,7 +2270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-22T15:42:58.804583Z",
@@ -2282,8 +2282,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 13.4 ms, sys: 50.6 ms, total: 64 ms\n",
-      "Wall time: 77.6 ms\n"
+      "CPU times: user 12.3 ms, sys: 23.8 ms, total: 36.2 ms\n",
+      "Wall time: 34 ms\n"
      ]
     }
    ],
@@ -2294,7 +2294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-22T15:42:58.818620Z",
@@ -2306,8 +2306,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 10.3 ms, sys: 1.32 ms, total: 11.6 ms\n",
-      "Wall time: 11.5 ms\n"
+      "CPU times: user 101 ms, sys: 0 ns, total: 101 ms\n",
+      "Wall time: 4.81 ms\n"
      ]
     }
    ],
@@ -2413,7 +2413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-22T15:42:58.983297Z",
@@ -2426,34 +2426,83 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "openblas64__info:\n",
-      "    libraries = ['openblas64_', 'openblas64_']\n",
-      "    library_dirs = ['/usr/local/lib']\n",
-      "    language = c\n",
-      "    define_macros = [('HAVE_CBLAS', None), ('BLAS_SYMBOL_SUFFIX', '64_'), ('HAVE_BLAS_ILP64', None)]\n",
-      "    runtime_library_dirs = ['/usr/local/lib']\n",
-      "blas_ilp64_opt_info:\n",
-      "    libraries = ['openblas64_', 'openblas64_']\n",
-      "    library_dirs = ['/usr/local/lib']\n",
-      "    language = c\n",
-      "    define_macros = [('HAVE_CBLAS', None), ('BLAS_SYMBOL_SUFFIX', '64_'), ('HAVE_BLAS_ILP64', None)]\n",
-      "    runtime_library_dirs = ['/usr/local/lib']\n",
-      "openblas64__lapack_info:\n",
-      "    libraries = ['openblas64_', 'openblas64_']\n",
-      "    library_dirs = ['/usr/local/lib']\n",
-      "    language = c\n",
-      "    define_macros = [('HAVE_CBLAS', None), ('BLAS_SYMBOL_SUFFIX', '64_'), ('HAVE_BLAS_ILP64', None), ('HAVE_LAPACKE', None)]\n",
-      "    runtime_library_dirs = ['/usr/local/lib']\n",
-      "lapack_ilp64_opt_info:\n",
-      "    libraries = ['openblas64_', 'openblas64_']\n",
-      "    library_dirs = ['/usr/local/lib']\n",
-      "    language = c\n",
-      "    define_macros = [('HAVE_CBLAS', None), ('BLAS_SYMBOL_SUFFIX', '64_'), ('HAVE_BLAS_ILP64', None), ('HAVE_LAPACKE', None)]\n",
-      "    runtime_library_dirs = ['/usr/local/lib']\n",
-      "Supported SIMD extensions in this NumPy install:\n",
-      "    baseline = NEON,NEON_FP16,NEON_VFPV4,ASIMD\n",
-      "    found = ASIMDHP,ASIMDDP\n",
-      "    not found = ASIMDFHM\n",
+      "Build Dependencies:\n",
+      "  blas:\n",
+      "    detection method: pkgconfig\n",
+      "    found: true\n",
+      "    include directory: /usr/local/include\n",
+      "    lib directory: /usr/local/lib\n",
+      "    name: openblas64\n",
+      "    openblas configuration: USE_64BITINT=1 DYNAMIC_ARCH=1 DYNAMIC_OLDER= NO_CBLAS=\n",
+      "      NO_LAPACK= NO_LAPACKE= NO_AFFINITY=1 USE_OPENMP= HASWELL MAX_THREADS=2\n",
+      "    pc file directory: /usr/local/lib/pkgconfig\n",
+      "    version: 0.3.23.dev\n",
+      "  lapack:\n",
+      "    detection method: internal\n",
+      "    found: true\n",
+      "    include directory: unknown\n",
+      "    lib directory: unknown\n",
+      "    name: dep139863411681952\n",
+      "    openblas configuration: unknown\n",
+      "    pc file directory: unknown\n",
+      "    version: 1.26.4\n",
+      "Compilers:\n",
+      "  c:\n",
+      "    args: -fno-strict-aliasing\n",
+      "    commands: cc\n",
+      "    linker: ld.bfd\n",
+      "    linker args: -Wl,--strip-debug, -fno-strict-aliasing\n",
+      "    name: gcc\n",
+      "    version: 10.2.1\n",
+      "  c++:\n",
+      "    commands: c++\n",
+      "    linker: ld.bfd\n",
+      "    linker args: -Wl,--strip-debug\n",
+      "    name: gcc\n",
+      "    version: 10.2.1\n",
+      "  cython:\n",
+      "    commands: cython\n",
+      "    linker: cython\n",
+      "    name: cython\n",
+      "    version: 3.0.8\n",
+      "Machine Information:\n",
+      "  build:\n",
+      "    cpu: x86_64\n",
+      "    endian: little\n",
+      "    family: x86_64\n",
+      "    system: linux\n",
+      "  host:\n",
+      "    cpu: x86_64\n",
+      "    endian: little\n",
+      "    family: x86_64\n",
+      "    system: linux\n",
+      "Python Information:\n",
+      "  path: /opt/python/cp310-cp310/bin/python\n",
+      "  version: '3.10'\n",
+      "SIMD Extensions:\n",
+      "  baseline:\n",
+      "  - SSE\n",
+      "  - SSE2\n",
+      "  - SSE3\n",
+      "  found:\n",
+      "  - SSSE3\n",
+      "  - SSE41\n",
+      "  - POPCNT\n",
+      "  - SSE42\n",
+      "  - AVX\n",
+      "  - F16C\n",
+      "  - FMA3\n",
+      "  - AVX2\n",
+      "  not found:\n",
+      "  - AVX512F\n",
+      "  - AVX512CD\n",
+      "  - AVX512_KNL\n",
+      "  - AVX512_KNM\n",
+      "  - AVX512_SKX\n",
+      "  - AVX512_CLX\n",
+      "  - AVX512_CNL\n",
+      "  - AVX512_ICL\n",
+      "\n",
       "None\n"
      ]
     }
@@ -2485,7 +2534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 173,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-22T15:42:58.988860Z",
@@ -2497,8 +2546,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[258340 251179 238200 252220 246860]\n",
-      " [243073 245739 251546 249450 246257]]\n"
+      "[[245446 258806 256878 251426 255701]\n",
+      " [250348 264381 249174 259735 254798]]\n"
      ]
     }
    ],
