Была обучена модель линейной регрессии на данных о стоимости автомобилей

--- a/1lab/homework01.ipynb
+++ b/1lab/homework01.ipynb
@@ -910,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1535,14 +1535,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using device: cpu\n"
+      "Using device: cuda\n"
      ]
     },
     {
@@ -1557,7 +1557,7 @@
        "        [0., 0., 0.,  ..., 0., 0., 1.]])"
       ]
      },
-     "execution_count": 217,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1566,7 +1566,7 @@
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "print(f\"Using device: {device}\")\n",
     "\n",
-    "n = 10000\n",
+    "n = 15000\n",
     "a = torch.eye(n,n)\n",
     "b = torch.eye(n,n)\n",
     "a @ b\n"
