Add metrics to 3lab

--- a/3lab/3lab.ipynb
+++ b/3lab/3lab.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 53,
    "id": "2ad4e15f",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 54,
    "id": "4817ea6e",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 55,
    "id": "07117ac4",
    "metadata": {},
    "outputs": [
@@ -189,7 +189,7 @@
        "[150 rows x 5 columns]"
       ]
      },
-     "execution_count": 369,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 56,
    "id": "ca633494",
    "metadata": {},
    "outputs": [],
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 57,
    "id": "bbdc87b5",
    "metadata": {},
    "outputs": [
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": 58,
    "id": "ef7fa6c6",
    "metadata": {},
    "outputs": [
@@ -381,7 +381,7 @@
        "[150 rows x 4 columns]"
       ]
      },
-     "execution_count": 372,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 59,
    "id": "443020ee",
    "metadata": {},
    "outputs": [],
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 60,
    "id": "62aba55a",
    "metadata": {},
    "outputs": [
@@ -435,7 +435,7 @@
        "       2, 0, 2, 2, 2, 2, 0, 2, 2, 2, 0, 2, 2, 2, 0, 2, 2, 0], dtype=int32)"
       ]
      },
-     "execution_count": 374,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 61,
    "id": "d3bc8c9f",
    "metadata": {},
    "outputs": [
@@ -464,7 +464,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_21031/3605348509.py:1: FutureWarning: pandas.value_counts is deprecated and will be removed in a future version. Use pd.Series(obj).value_counts() instead.\n",
+      "/tmp/ipykernel_13108/3605348509.py:1: FutureWarning: pandas.value_counts is deprecated and will be removed in a future version. Use pd.Series(obj).value_counts() instead.\n",
       "  pd.value_counts(y)\n"
      ]
     },
@@ -477,7 +477,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 375,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 62,
    "id": "73f7ab7a",
    "metadata": {},
    "outputs": [
@@ -572,7 +572,7 @@
        "2       6.853846      3.076923       5.715385      2.053846  Centroid"
       ]
      },
-     "execution_count": 376,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 63,
    "id": "d040b0c8",
    "metadata": {},
    "outputs": [
@@ -737,7 +737,7 @@
        "[153 rows x 5 columns]"
       ]
      },
-     "execution_count": 377,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
+   "execution_count": 64,
    "id": "8bf0988b",
    "metadata": {},
    "outputs": [
@@ -777,6 +777,163 @@
     "sns.set_style(\"whitegrid\")\n",
     "sns.pairplot(X,hue=\"Species\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce238a50",
+   "metadata": {},
+   "source": [
+    "Теперь взглянём на совпадение результатов кластеризации с \"эталонным\" делением"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "286810dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b14a241f",
+   "metadata": {},
+   "source": [
+    "Здесь \"1\" и \"0\" меняются местами, чтобы их порядок совпадал с порядком расположения в таблице"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "f1a982c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>col_0</th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Species</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Iris-setosa</th>\n",
+       "      <td>50</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Iris-versicolor</th>\n",
+       "      <td>0</td>\n",
+       "      <td>47</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Iris-virginica</th>\n",
+       "      <td>0</td>\n",
+       "      <td>14</td>\n",
+       "      <td>36</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "col_0             0   1   2\n",
+       "Species                    \n",
+       "Iris-setosa      50   0   0\n",
+       "Iris-versicolor   0  47   3\n",
+       "Iris-virginica    0  14  36"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mapping = {0: 1, 1: 0, 2: 2}\n",
+    "y_swapped = np.array([mapping[val] for val in y])\n",
+    "\n",
+    "pd.crosstab(iris_data['Species'], y_swapped)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7cfcfac5",
+   "metadata": {},
+   "source": [
+    "Видно, что все Iris-setosa были правильно кластеризованы, как и почти все Iris-versicolor, в то время как значительная часть Iris-virginica были ошибочно отнесены к Iris-versicolor."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "429068e6",
+   "metadata": {},
+   "source": [
+    "Посмотрим, как это отражается в метрике"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "115fbfcf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import normalized_mutual_info_score\n",
+    "from sklearn.preprocessing import LabelEncoder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "9345ac86",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Normalized Mutual Information: 0.742\n"
+     ]
+    }
+   ],
+   "source": [
+    "true_labels = iris_data['Species']\n",
+    "le = LabelEncoder()\n",
+    "true_labels_num = le.fit_transform(true_labels)\n",
+    "\n",
+    "nmi = normalized_mutual_info_score(true_labels_num, y)\n",
+    "print(f\"Normalized Mutual Information: {nmi:.3f}\")"
    ]
   }
  ],
